example of scraping everyone in you area

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,7 @@ HTTPToolkit_2025-03-08_20-28.har
 hinge_profiles.json
 runner.py
 standouts.json
+recomendations.json
+all_recommendations.json
+outreach.txt
+university_matches.csv
